# codex-a2a-server

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  compatibility.md  deployment.md  guide.md  init_system.md
docs/operations/opencode/: openapi-serve-1.2.4.json  openapi-snapshot.md
scripts/: README.md  deploy.sh  deploy_light.sh  init_system.sh  smoke_test_built_cli.sh  start_services.sh  sync_codex_docs.sh  uninstall.sh
scripts/deploy/: enable_instance.sh  install_units.sh  run_a2a.sh  run_codex.sh  run_opencode.sh  setup_instance.sh  update_a2a.sh
src/codex_a2a_serve/: __init__.py  agent.py  app.py  codex_client.py  config.py  extension_contracts.py  jsonrpc_ext.py  output_mapping.py  streaming.py  text_parts.py  tool_call_payloads.py
src/codex_a2a_server/: __init__.py  agent.py  app.py  cli.py  codex_client.py  config.py  extension_contracts.py  http_middlewares.py  jsonrpc_ext.py  jsonrpc_models.py  logging_context.py  metrics.py  openapi_contracts.py  output_mapping.py  profile.py  request_handler.py  runtime_output_contracts.py  stream_chunks.py  stream_interrupts.py  stream_state.py  streaming.py  tool_call_payloads.py
src/codex_a2a_server/assets/: __init__.py
src/codex_a2a_server/execution/: executor.py  (+10 more)
tests/: helpers.py  test_agent_card.py  test_agent_errors.py  test_call_context_builder.py  test_cancellation.py  test_cli.py  test_codex_agent_session_binding.py  test_codex_client_params.py  test_codex_session_extension.py  test_directory_validation.py  test_extension_contract_consistency.py  test_jsonrpc_models.py  test_metrics.py  test_opencode_agent_session_binding.py  test_opencode_client_params.py  test_opencode_session_extension.py  test_profile.py  test_release_distribution_contract.py  test_request_handler.py  test_session_ownership.py  test_settings.py  test_stream_chunks.py  test_stream_interrupts.py  test_streaming_output_contract.py  test_tool_call_payloads.py  test_transport_contract.py  test_version.py
tests/contracts/: test_extension_contract_consistency.py
tests/execution/: test_agent_errors.py  test_cancellation.py  test_codex_agent_session_binding.py  test_directory_validation.py  test_metrics.py  test_session_ownership.py  test_stream_chunks.py  test_stream_interrupts.py  test_streaming_output_contract.py  test_tool_call_payloads.py
tests/jsonrpc/: test_codex_session_extension.py  test_jsonrpc_models.py
tests/package/: test_release_distribution_contract.py
tests/profile/: test_profile.py
tests/server/: test_agent_card.py  test_call_context_builder.py  test_request_handler.py  test_transport_contract.py
tests/support/: context.py  dummy_clients.py  fixtures.py  settings.py
tests/upstream/: test_codex_client_params.py
(+39 files in other folders)
